Azure Functions plugin